<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GrammarAdjectives">

    <ImageView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:scaleType="centerCrop"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background" />

    <TextView
        android:id="@+id/grammar_a0"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="0dp"
        android:text="Possessive adjectives and subject pronouns
 (I, my, your, etc.)"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="47sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="3sp"
            android:layout_marginBottom="15sp"
            android:text="Grammar"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/grammar_shop_card"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="15sp"
            android:layout_marginBottom="12sp"
            android:background="@drawable/empty_background"
            android:contentDescription="words"
            android:scaleType="centerCrop"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.984"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.333"
            app:srcCompat="@drawable/shopping_cart"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/coin"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4sp"
            android:scaleType="centerCrop"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/grammar_shop_card"
            app:layout_constraintHorizontal_bias="0.18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/coin" />

        <ImageView
            android:id="@+id/ruby"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_marginStart="5sp"
            android:layout_marginTop="4sp"
            android:layout_toEndOf="@+id/textView3"
            android:scaleType="centerCrop"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/grammar_shop_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ruby" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="5sp"
            android:layout_toStartOf="@+id/coin"
            android:text="1000"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/coin"
            app:layout_constraintHorizontal_bias="0.785"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="5sp"
            android:layout_toEndOf="@+id/coin"
            android:text="100"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/ruby"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0sp"
        android:layout_marginTop="0sp"
        android:layout_marginBottom="0sp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageButton
            android:id="@+id/grammar_learn"
            android:layout_width="45sp"
            android:layout_height="45sp"
            android:layout_marginEnd="75sp"
            android:layout_toStartOf="@+id/grammar_game"
            android:background="@drawable/empty_background"
            android:contentDescription="words"
            android:scaleType="centerCrop"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/home"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/grammar_game"
            android:layout_width="45sp"
            android:layout_height="45sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2sp"
            android:background="@drawable/empty_background"
            android:contentDescription="words"
            android:scaleType="centerCrop"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/grammar_about_us"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toEndOf="@+id/grammar_learn"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/game"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/grammar_about_us"
            android:layout_width="45sp"
            android:layout_height="45sp"
            android:layout_marginStart="75sp"
            android:layout_marginBottom="8sp"
            android:layout_toEndOf="@+id/grammar_game"
            android:background="@drawable/empty_background"
            android:contentDescription="words"
            android:scaleType="centerCrop"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/about_us"
            tools:ignore="TouchTargetSizeCheck" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="435sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="90sp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="435sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/main_space"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:layout_marginStart="15sp"
                android:text=""
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/table1"
                android:layout_width="wrap_content"
                android:layout_height="600sp"
                android:layout_marginStart="15sp"
                android:layout_marginEnd="30sp"
                android:scaleType="centerCrop"
                android:textAlignment="center"
                app:srcCompat="@drawable/pronounce_table"
                android:contentDescription="" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:layout_marginStart="15sp"
                android:text=""
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="125sp"
                android:layout_marginStart="15sp"
                android:text="@string/edjectives_1"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:layout_marginStart="15sp"
                android:text=""
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="170sp"
                android:layout_marginStart="15sp"
                android:text="@string/edjectives_2"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:layout_marginStart="15sp"
                android:text=""
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="200sp"
                android:layout_marginStart="15sp"
                android:text="@string/edjectives_3"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:layout_marginStart="15sp"
                android:text=""
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="125sp"
                android:layout_marginStart="15sp"
                android:text="@string/edjectives_4"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:layout_marginStart="15sp"
                android:text=""
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="125sp"
                android:layout_marginStart="15sp"
                android:text="@string/edjectives_5"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView38"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:layout_marginStart="15sp"
                android:text=""
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/ExercisesThisThere"
                android:layout_width="wrap_content"
                android:layout_height="60sp"
                android:layout_marginStart="40sp"
                android:layout_marginEnd="40sp"
                android:scaleType="centerCrop"
                android:background="@drawable/empty_background"
                android:textAlignment="center"
                app:srcCompat="@drawable/exercises"
                android:contentDescription="@string/table_grammar3" />

        </LinearLayout>

    </ScrollView>
</RelativeLayout>
